--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "matthew-bday-cake",
+  "name": "johnny-bday-cake",
   "version": "0.1.0",
   "homepage": "https://tinabyte.github.io/bdaycakee",
   "private": true,
